# databricks_code_validator

./: .gitignore  CLAUDE.md  LICENSE  README.md  install_databricks.py  pyproject.toml  requirements.txt  setup.py
.github/scripts/: extract_changed_notebooks.py  validate_via_databricks.py
.github/workflows/: validate-notebooks.yml
config/: validation_rules.yaml
dbx_code_validator/: cli.py
dbx_code_validator/services/: llm_service.py  notebook_service.py
docs/: OPTION_2_WHEEL_JOB_DEPLOYMENT.md  OPTION_3_GITHUB_ACTIONS_CICD.md
notebooks/: 01_Python_API_Quick_Start.py  RUNME.py.ipynb
src/code_standards_bot/: __init__.py  cli.py  main.py
src/code_standards_bot/models/: __init__.py  notebook_metadata.py  validation_result.py
src/code_standards_bot/services/: llm_service.py
src/code_standards_bot/utils/: logging_utils.py  spark_utils.py
src/code_standards_bot/validators/: base_validator.py  code_quality_validator.py  governance_validator.py  security_validator.py
src/databricks_code_validator/: __init__.py  cli.py
src/databricks_code_validator/config/: __init__.py
src/databricks_code_validator/services/: __init__.py  notebook_service.py
src/databricks_code_validator/utils/: spark_utils.py
src/databricks_code_validator/validators/: code_quality_validator.py  performance_validator.py  security_validator.py
src/dbx_code_validator/: cli.py  main.py
src/dbx_code_validator/config/: llm_providers.py  yaml_config.py
src/dbx_code_validator/utils/: __init__.py
src/dbx_code_validator/validators/: __init__.py
